Update Nowy dokument tekstowy - Kopia (2).html

--- a/Nowy dokument tekstowy - Kopia (2).html
+++ b/Nowy dokument tekstowy - Kopia (2).html
@@ -1,4 +1,4 @@
-// Small subset of the webL10n API by Fabien Cazenave for pdf.js extension.
+// Small  of the webL10n API by Fabien Cazenave for pdf.js extension.
 (function(window) {
   var gLanguage = '';
   var gExternalLocalizerServices = null;
