--- a/Nowy dokument tekstowy - Kopia (2).html
+++ b/Nowy dokument tekstowy - Kopia (2).html
@@ -1,4 +1,4 @@
-// Small subset of the webL10n API by Fabien Cazenave for pdf.js extension. //jatuedytuje
+// JŻS subset of the webL10n API by Fabien Cazenave for pdf.js extension.
 (function(window) { //ja tu edytuje
   var gLanguage = '';
   var gExternalLocalizerServices = null;
